# codedb-mcp

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  setup-for-agent.md
.codedb-mcp/: codedb-mcp.toml
skills/code-module-atlas/: SKILL.md
skills/code-module-atlas/agents/: openai.yaml
skills/code-module-atlas/assets/viewer/: index.html  package-lock.json  package.json  vite.config.ts
skills/code-module-atlas/assets/viewer/public/assets/: index-Bbg0cadn.js  index-DB71QehS.js  ndegree-ui-D9LYu0qC.js  path-ui-DUXWpTMo.js  pathfinder-wgwU7SjB.js  postprocessing-D4VCwszR.js  submissions-ui-DbX3bubS.js  three-Df2n1lyU.js
skills/code-module-atlas/assets/viewer/scripts/: build-meet-dataset.mjs  prepare-meet-assets.mjs
skills/code-module-atlas/references/: workflow.md
skills/code-module-atlas/scripts/: build-module-atlas.mjs
skills/codedb-mcp/: SKILL.md
skills/codedb-mcp/agents/: openai.yaml
skills/codedb-mcp/assets/: codedb-mcp.toml.template
skills/codedb-mcp/references/: mcp-install.md  tools.md
skills/codedb-mcp/scripts/: setup.ps1
skills/deepwiki/: SKILL.md
skills/deepwiki/agents/: openai.yaml
skills/deepwiki/references/: deepwiki-workflow.md
src/: bm25.rs  cache.rs  config.rs  embedding.rs  graph.rs  indexer.rs  language.rs  main.rs  mcp.rs  search.rs  source.rs  tokens.rs  tools.rs  tree_sitter_lang.rs  types.rs  vector_store.rs  watcher.rs
