[package]
name = "codebase-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
model2vec-rs = "0.2"
notify = "8"
parking_lot = "0.12"
rayon = "1"
regex = "1"
rmcp = { version = "1.7", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.9"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
